# tasm-lang

./: .gitignore  Cargo.toml  Makefile  README.md  test_program.rs
.cargo/: config.toml
benchmarks/: dazefield_element_mul.json  fast_ntt.json  project_euler_1.json  project_euler_2.json  project_euler_3_i600851.json  project_euler_4_i10_to_50.json  project_euler_4_w_unsafe_lists_i10_to_100.json  project_euler_4_w_unsafe_lists_i10_to_50.json  project_euler_5.json  project_euler_6.json  project_euler_7_i101.json  project_euler_7_i150.json  recufier_merkle_root.json  simple_map_on_bfe.json  verify_authentication_path.json
profiles/: dazefield_element_mul.profile  fast_ntt.profile  project_euler_1.profile  project_euler_2.profile  project_euler_3_i600851.profile  project_euler_4_i10_to_50.profile  project_euler_4_w_unsafe_lists_i10_to_100.profile  project_euler_4_w_unsafe_lists_i10_to_50.profile  project_euler_5.profile  project_euler_6.profile  project_euler_7_i101.profile  project_euler_7_i150.profile  recufier_merkle_root.profile  simple_map_on_bfe.profile  test::verify_factorial_program.profile  verify_factorial_program.profile  verify_stark_proof_inner_padded_height_1024.profile  verify_stark_proof_inner_padded_height_1024_0_input_words.profile  verify_stark_proof_inner_padded_height_256.profile  verify_stark_proof_inner_padded_height_256_0_input_words.profile
src/: ast.rs  ast_types.rs  cfg.rs  compiled_tasm.rs  composite_types.rs  custom_type_resolver.rs  graft.rs  lib.rs  libraries.rs  main.rs  programs.rs  shared_test.rs  ssa.rs  stack.rs  subroutine.rs  swap_digests.rs  tasm.rs  tasm_code_generator.rs  tasm_function_signatures.rs  tests.rs  tests_and_benchmarks.rs  type_checker.rs  types.rs
src/ast_types/: abstract_argument.rs  array_type.rs  custom_type_oil.rs  enum_type.rs  field_id.rs  function_type.rs  list_type.rs  struct_type.rs  tuple.rs
src/libraries/: alloc_boxed.rs  bfe.rs  bfield_codec.rs  boxed.rs  core.rs  hasher.rs  io.rs  polynomial.rs  recufy.rs  recursion.rs  result.rs  tasm.rs  unsigned_integers.rs  vector.rs  vm_proof_iter.rs  xfe.rs
src/libraries/core/: array.rs  option_type.rs  result_type.rs
src/libraries/hasher/: algebraic_hasher.rs  sponge_hasher.rs
src/libraries/recufy/: vm_proof_iter.rs
src/libraries/recursion/: vm_proof_iter.rs
src/tasm_code_generator/: data_type.rs  enum_type.rs  function_state.rs  inner_function_tasm_code.rs  match_code.rs  outer_function_tasm_code.rs  stack.rs  struct_type.rs  subroutine.rs
src/tasm_code_generator/data_type/: array_type.rs  enum_type.rs  struct_type.rs  tuple_type.rs
src/tests/: benchmark.rs  compile_and_run_tests.rs  compile_and_typecheck_tests.rs  programs.rs  shared_test.rs
src/tests/programs/: arithmetic.rs  hashing.rs  io.rs  local_functions.rs  mmr.rs  other.rs  spill_to_memory.rs
src/tests_and_benchmarks/: benchmarks.rs  ozk.rs  ozk_programs.rs  programs.rs  shared_test.rs  test_helpers.rs
(+231 files in other folders)
