[package]
name = "tasm-lang"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "^0.4.31"
regex = "1.10"
inflections = "1.1"
itertools = "0.12"
num = "0.4"
rand = "0"
strum = { version = "0.26", features = ["derive"] }
syn = { version = "1.0", features = ["full", "extra-traits"] }
tasm-lib = { git = "https://github.com/TritonVM/tasm-lib.git", rev = "63194a05" }
quote = "1.0"

[dev-dependencies]
anyhow = "1"
arbitrary = { version = "1", features = ["derive"] }
field_count = "0.1.1"
pretty_assertions = "1.4"
proptest = "1.4"
proptest-arbitrary-interop = "0.1"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
test-strategy = "0.3"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"]

[lints.clippy]
used_underscore_binding = "warn"
