[package]
name = "tasm-lang"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "^0.4.38"
clap = "4.5"
inflections = "1.1"
itertools = "0.13"
num = "0.4"
quote = "1.0"
rand = "0"
regex = "1.10"
strum = { version = "0.26", features = ["derive"] }
syn = { version = "1.0", features = ["full", "extra-traits"] }
tasm-lib = { git = "https://github.com/TritonVM/tasm-lib.git", rev = "d71f76a2faf09b7c9e277a29bf9f16470dffd4d3" }

[dev-dependencies]
anyhow = "1"
arbitrary = { version = "1", features = ["derive"] }
field_count = "0.1.1"
pretty_assertions = "1.4"
proptest = "1.5"
proptest-arbitrary-interop = "0.1"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
test-strategy = "0.4"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[lints.clippy]
used_underscore_binding = "warn"
